--- a/musicSyles.css
+++ b/musicSyles.css
@@ -87,8 +87,8 @@ https://colorhunt.co/palette/ffecd64cb9e73559e00f2167 */
 
 .quest{
     display: grid;
-    grid-template-rows: auto auto auto auto auto auto auto auto auto 1fr;
-    grid-template-columns: 10fr 1fr;
+    grid-template-rows: auto auto auto auto auto auto auto auto auto auto auto auto 1fr;
+    grid-template-columns: 10fr 5fr 1fr;
 }
 
 .borderRadius1{
