--- a/musicSyles.css
+++ b/musicSyles.css
@@ -79,6 +79,16 @@ https://colorhunt.co/palette/ffecd64cb9e73559e00f2167 */
 
 .div2Height{
     height: 30px;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 3fr 2fr 1fr;
+}
+
+.div3Height{
+    height: 30px;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 5fr 5fr;
 }
 
 .div2Align{
@@ -125,23 +135,23 @@ https://colorhunt.co/palette/ffecd64cb9e73559e00f2167 */
 .margin1{
     margin-top: 10px;
     margin-bottom: 10px;
-    margin-left: 20px;
+    margin-left: 40px;
 }
 
 .margin2{
     margin-top: 10px;
     margin-bottom: 10px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 40px;
+    margin-right: 40px;
     border-style: hidden;
 }
 
 .margin3{
-    margin-left: 30px;
+    margin-left: 50px;
 }
 
 .marright{
-    margin-right: 10px;
+    margin-right: 40px;
 }
 
 .marleft{
